fix: find-free-cloud and cc_users on mod-cloud
