# src/quads/server/blueprints/clouds.py
@@ -1,39 +1,17 @@
 import json
 from datetime import datetime
 
-from flask import Blueprint, jsonify, request, Response, make_response
-from quads.server.dao.assignment import AssignmentDao
+from flask import Blueprint, Response, jsonify, make_response, request
 
 from quads.config import Config
 from quads.server.blueprints import check_access
+from quads.server.dao.assignment import AssignmentDao
 from quads.server.dao.baseDao import EntryNotFound, InvalidArgument
 from quads.server.dao.cloud import CloudDao
 from quads.server.dao.host import HostDao
 from quads.server.dao.schedule import ScheduleDao
 
 cloud_bp = Blueprint("clouds", __name__)
-
-
-@cloud_bp.route("/<cloud>/")
-def get_cloud(cloud: str) -> Response:
-    """
-    GET request that returns the cloud with the given name.
-        ---
-        tags:
-          - API
-
-    :param cloud: str: Specify the cloud name
-    :return: A response object that contains the json representation of the cloud
-    """
-    _cloud = CloudDao.get_cloud(cloud)
-    if not _cloud:
-        response = {
-            "status_code": 400,
-            "error": "Bad Request",
-            "message": f"Cloud not found: {cloud}",
-        }
-        return make_response(jsonify(response), 400)
-    return jsonify(_cloud.as_dict())
 
 
 @cloud_bp.route("/")
@@ -60,6 +38,21 @@ def get_clouds() -> Response:
     else:
         _clouds = CloudDao.get_clouds()
     return jsonify([_cloud.as_dict() for _cloud in _clouds] if _clouds else {})
+
+
+@cloud_bp.route("/free/")
+def get_free_clouds() -> Response:
+    """
+    Returns a list of all free clouds in the database.
+        ---
+        tags:
+          - API
+
+    :return: The list of free clouds
+    """
+    _clouds = CloudDao.get_free_clouds()
+
+    return jsonify([_cloud.as_dict() for _cloud in _clouds])
 
 
 @cloud_bp.route("/", methods=["POST"])
@@ -192,7 +185,9 @@ def get_summary() -> Response:
             description = Config["spare_pool_description"]
             owner = Config["spare_pool_owner"]
         else:
-            date = datetime.strptime(_date, "%Y-%m-%dT%H:%M") if _date else datetime.now()
+            date = (
+                datetime.strptime(_date, "%Y-%m-%dT%H:%M") if _date else datetime.now()
+            )
             schedules = ScheduleDao.get_current_schedule(cloud=_cloud, date=date)
             count = len(schedules)
             total_count += count
